--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fb:build": "node fabrique/actions/build.js",
     "fb:format": "prettier --write --ignore-unknown --config ./.prettierrc \"src/**/*.{js,jsx,ts,tsx,html,css,scss}\"",
     "fb:test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "fb:test:coverage": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --collect-coverage",
     "fb:prod": "node fabrique/actions/build.js && cd dist && npm publish --access public --registry https://registry.npmjs.org",
     "fb:dev": "node fabrique/actions/build.js --dev && cd dist && npm publish --quiet --registry http://localhost:4873"
   },
